# hack_simulator

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Readme.md  emulator.sh
assembler/: Cargo.toml
assembler/src/: code.rs  lib.rs  parser.rs  symbol_table.rs
assembler/tests/: assembler.rs  code.rs  macros.rs  parser.rs  symbol_table.rs
assembler/tests/data/: Max.asm  NonStandard.asm  NonStandard.hack
interpreter/: Cargo.toml
interpreter/src/: cpu.rs  lib.rs
interpreter/src/instructions/: c.rs  mod.rs
interpreter/src/memory/: mod.rs  ram.rs  rom.rs
interpreter/src/runner/: commands.rs  macros.rs  mod.rs
interpreter/tests/: run_tst_files.rs
interpreter/tests/data/: FormatTest.cmp  FormatTest.tst  Mult.hack  Mult.tst  NegSub.asm  NegSub.cmp  NegSub.tst
programs/: Fill.hack
src/: cpu.rs  lib.rs  main.rs  simulator.rs
src/instructions/: a.rs  c.rs
src/memory/: mod.rs  ram.rs  rom.rs
src/runner/: macros.rs  mod.rs
