[package]

name = "hack_simulator"
version = "0.0.1"
authors = ["Kevin Butler <haqkrs@gmail.com>"]

[dependencies]
log = "0.3"
docopt = "0.6"
rustc-serialize = "0.3"
piston_window = "0.73.0"
image = "0.17"

[dependencies.hack_interpreter]
path = "interpreter"

[dev-dependencies]
tempdir = "0.3"
glob = "0.2"

[features]
unstable = []
